refactor docker-compose files and improve teardown
Signed-off-by: Iliya Savov <isavov@users.noreply.github.com>

--- a/docker-compose.evm.yml
+++ b/docker-compose.evm.yml
@@ -1,6 +1,5 @@
 services:
   record-streams-uploader:
-    &record-streams-uploader
     restart: "no"
     entrypoint:
       [
@@ -9,14 +8,7 @@ services:
         "echo 'Deleting old recordStream files.';find /records/ -type f -delete;echo 'This container is intentionally disabled by the EVM profile.';"
       ]
     command: []
-
-  record-streams-uploader-1: *record-streams-uploader
-
-  record-streams-uploader-2: *record-streams-uploader
-
-  record-streams-uploader-3: *record-streams-uploader
   account-balances-uploader:
-    &account-balances-uploader
     restart: "no"
     entrypoint:
       [
@@ -25,14 +17,7 @@ services:
         "echo 'Deleting old accountBalances files.';find /balances/ -type f -delete;echo 'This container is intentionally disabled by the EVM profile.';"
       ]
     command: []
-
-  account-balances-uploader-1: *account-balances-uploader
-
-  account-balances-uploader-2: *account-balances-uploader
-
-  account-balances-uploader-3: *account-balances-uploader
   record-sidecar-uploader:
-    &record-sidecar-uploader
     restart: "no"
     entrypoint:
       [
@@ -41,13 +26,6 @@ services:
         "echo 'Deleting old sidecars files.';find /sidecar-files/ -type f -delete;echo 'This container is intentionally disabled by the EVM profile.';"
       ]
     command: []
-
-  record-sidecar-uploader-1: *record-sidecar-uploader
-
-  record-sidecar-uploader-2: *record-sidecar-uploader
-
-  record-sidecar-uploader-3: *record-sidecar-uploader
-
   minio:
     restart: "no"
     entrypoint:
@@ -58,6 +36,5 @@ services:
     command: []
   importer:
     volumes:
-      - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances/:/node/streams/accountBalances/"
-      - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams/:/node/streams/recordstreams/"
-    #comment
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances/balance0.0.3:/node/streams/accountBalances/balance0.0.3"
+      - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams/record0.0.3:/node/streams/recordstreams/record0.0.3"
