--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -377,6 +377,56 @@ services:
     restart: unless-stopped
     tty: false
 
+  relay-ws:
+    image: "${RELAY_IMAGE_PREFIX}hedera-json-rpc-relay:${RELAY_IMAGE_TAG}"
+    container_name: json-rpc-relay-ws
+    mem_swappiness: 0
+    mem_limit: "${RELAY_MEM_LIMIT}"
+    memswap_limit: "${RELAY_MEM_LIMIT}"
+    depends_on:
+      rest:
+        condition: service_started
+      network-node:
+        condition: service_healthy
+    networks:
+      - mirror-node
+      - network-node-bridge
+    environment:
+      HEDERA_NETWORK: "${RELAY_HEDERA_NETWORK}"
+      OPERATOR_ID_MAIN: "${RELAY_OPERATOR_ID_MAIN}"
+      OPERATOR_KEY_MAIN: "${RELAY_OPERATOR_KEY_MAIN}"
+      CHAIN_ID: "${RELAY_CHAIN_ID}"
+      MIRROR_NODE_URL: "${RELAY_MIRROR_NODE_URL}"
+      MIRROR_NODE_RETRIES: "${RELAY_MIRROR_NODE_RETRIES}"
+      MIRROR_NODE_RETRY_DELAY: "${RELAY_MIRROR_NODE_RETRY_DELAY}"
+      LOCAL_NODE: "${RELAY_LOCAL_NODE}"
+      SERVER_PORT: "${RELAY_SERVER_PORT}"
+      E2E_RELAY_HOST: "${RELAY_E2E_HOST}"
+      FEE_HISTORY_MAX_RESULTS: "${RELAY_FEE_HISTORY_MAX_RESULTS}"
+      DEFAULT_RATE_LIMIT: "${RELAY_DEFAULT_RATE_LIMIT}"
+      TIER_1_RATE_LIMIT: "${RELAY_TIER_1_RATE_LIMIT}"
+      TIER_2_RATE_LIMIT: "${RELAY_TIER_2_RATE_LIMIT}"
+      TIER_3_RATE_LIMIT: "${RELAY_TIER_3_RATE_LIMIT}"
+      LIMIT_DURATION: "${RELAY_LIMIT_DURATION}"
+      HBAR_RATE_LIMIT_TINYBAR: "${RELAY_HBAR_RATE_LIMIT_TINYBAR}"
+      HBAR_RATE_LIMIT_DURATION: "${RELAY_HBAR_RATE_LIMIT_DURATION}"
+      ETH_GET_LOGS_BLOCK_RANGE_LIMIT: "${RELAY_ETH_GET_LOGS_BLOCK_RANGE_LIMIT}"
+      DEV_MODE: "${RELAY_DEV_MODE}"
+      INPUT_SIZE_LIMIT: "${RELAY_INPUT_SIZE_LIMIT}"
+      RATE_LIMIT_DISABLED: "${RELAY_RATE_LIMIT_DISABLED}"
+      SUBSCRIPTIONS_ENABLED: true
+      WS_CONNECTION_LIMIT_PER_IP: "${WS_CONNECTION_LIMIT_PER_IP}"
+      WS_CONNECTION_LIMIT: "${WS_CONNECTION_LIMIT}"
+      WS_MAX_CONNECTION_TTL: "${WS_MAX_CONNECTION_TTL}"
+      WS_MULTIPLE_ADDRESSES_ENABLED: "${WS_MULTIPLE_ADDRESSES_ENABLED}"
+      WS_SUBSCRIPTION_LIMIT: "${WS_SUBSCRIPTION_LIMIT}"
+    ports:
+      - "8546:8546"
+      - "8547:8547"
+    restart: unless-stopped
+    tty: false
+    command: ["start:ws"]
+
   envoy:
     image: "${ENVOY_IMAGE_PREFIX}envoy:${ENVOY_IMAGE_TAG}"
     container_name: envoy-proxy
