feat: add smoke test for ws
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/.github/workflows/smoke-tests.yaml
+++ b/.github/workflows/smoke-tests.yaml
@@ -37,6 +37,7 @@ jobs:
         run: |
           cd test/smoke
           npm ci
+          npx hardhat compile
           npx hardhat test --grep Smoke
 
       - name: Stop the local node
