feat: add env settings
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ NETWORK_NODE_IMAGE_PREFIX=gcr.io/hedera-registry/
 NETWORK_NODE_IMAGE_NAME=main-network-node
 
 #### Image Tags/Hashes ####
-NETWORK_NODE_IMAGE_TAG=0.38.0
-HAVEGED_IMAGE_TAG=0.38.0
+NETWORK_NODE_IMAGE_TAG=0.39.0-alpha.4
+HAVEGED_IMAGE_TAG=0.39.0-alpha.4
 
 #### Java Process Settings ####
 PLATFORM_JAVA_HEAP_MIN=256m
@@ -28,7 +28,7 @@ PYTHON_VERSION=python3.7
 
 #### MirrorNode Prefixes & Tags ####
 MIRROR_IMAGE_PREFIX=gcr.io/mirrornode/
-MIRROR_IMAGE_TAG=0.81.0-rc1
+MIRROR_IMAGE_TAG=0.83.0
 
 #### MirrorNode settings ####
 MIRROR_POSTGRES_IMAGE=postgres:14-alpine
@@ -72,6 +72,13 @@ RELAY_ETH_GET_LOGS_BLOCK_RANGE_LIMIT=2000
 RELAY_DEV_MODE=false
 RELAY_INPUT_SIZE_LIMIT=1
 RELAY_RATE_LIMIT_DISABLED=true
+
+#### JSON RPC Relay Websocket settings ####
+WS_CONNECTION_LIMIT_PER_IP: "10"
+WS_CONNECTION_LIMIT: "100"
+WS_MAX_CONNECTION_TTL: "300000"
+WS_MULTIPLE_ADDRESSES_ENABLED: "false"
+WS_SUBSCRIPTION_LIMIT: "100"
 
 #### Record Stream Uploader ####
 STREAM_EXTENSION=rcd.gz
