--- a/templates/.env.template
+++ b/templates/.env.template
@@ -73,6 +73,12 @@ RELAY_DEV_MODE=false
 RELAY_INPUT_SIZE_LIMIT=1
 RELAY_RATE_LIMIT_DISABLED=false
 
+WS_CONNECTION_LIMIT_PER_IP: "{{wsConnectionLimitPerIp}}"
+WS_CONNECTION_LIMIT: "{{wsConnectionLimit}}"
+WS_MAX_CONNECTION_TTL: "{{wsConnectionTTL}}"
+WS_MULTIPLE_ADDRESSES_ENABLED: "{{wsMultipleAddressesEnabled}}"
+WS_SUBSCRIPTION_LIMIT: "{{wsSubscriptionsLimit}}"
+
 #### Record Stream Uploader ####
 STREAM_EXTENSION={{streamExtension}}
 
