--- a/templates/local/.env.template
+++ b/templates/local/.env.template
@@ -73,6 +73,13 @@ RELAY_DEV_MODE={{devMode}}
 RELAY_INPUT_SIZE_LIMIT=1
 RELAY_RATE_LIMIT_DISABLED=true
 
+#### JSON RPC Relay Websocket settings ####
+WS_CONNECTION_LIMIT_PER_IP: "{{wsConnectionLimitPerIp}}"
+WS_CONNECTION_LIMIT: "{{wsConnectionLimit}}"
+WS_MAX_CONNECTION_TTL: "{{wsConnectionTTL}}"
+WS_MULTIPLE_ADDRESSES_ENABLED: "{{wsMultipleAddressesEnabled}}"
+WS_SUBSCRIPTION_LIMIT: "{{wsSubscriptionsLimit}}"
+
 #### Record Stream Uploader ####
 STREAM_EXTENSION={{streamExtension}}
 
