--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "prettier": "^3.0.3"
   },
   "lint-staged": {
-    "src/**/*.{js}": [
+    "src/**/*.{js,ts}": [
       "prettier --write"
     ],
     "src/**/*.js": [
