Add base configs
Signed-off-by: nikolay <n.atanasow94@gmail.com>

--- a/templates/bootstrap.template.properties
+++ b/templates/bootstrap.template.properties
@@ -8,4 +8,6 @@ files.maxSizeKb={{maxSizeKb}}
 hedera.recordStream.compressFilesOnCreation={{compressFilesOnCreation}}
 balances.compressOnCreation={{compressOnCreation}}
 contracts.maxNumWithHapiSigsAccess={{maxNumWithHapiSigsAccess}}
+accounts.blocklist.enabled={{blocklistEnabled}}
+accounts.blocklist.resource={{blocklistResource}}
 {{/features}}
