chore: update outdated settings
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/templates/.env.template
+++ b/templates/.env.template
@@ -78,7 +78,7 @@ RELAY_RATE_LIMIT_DISABLED=false
 
 WS_CONNECTION_LIMIT_PER_IP: "{{wsConnectionLimitPerIp}}"
 WS_CONNECTION_LIMIT: "{{wsConnectionLimit}}"
-WS_MAX_CONNECTION_TTL: "{{wsConnectionTTL}}"
+WS_MAX_INACTIVITY_TTL: "{{wsConnectionTTL}}"
 WS_MULTIPLE_ADDRESSES_ENABLED: "{{wsMultipleAddressesEnabled}}"
 WS_SUBSCRIPTION_LIMIT: "{{wsSubscriptionsLimit}}"
 
