--- a/templates/local/.env.template
+++ b/templates/local/.env.template
@@ -80,7 +80,7 @@ RELAY_ETH_POPULATE_SYNTHETIC_CONTRACT_RESULTS=true
 #### JSON RPC Relay Websocket settings ####
 WS_CONNECTION_LIMIT_PER_IP: "{{wsConnectionLimitPerIp}}"
 WS_CONNECTION_LIMIT: "{{wsConnectionLimit}}"
-WS_MAX_CONNECTION_TTL: "{{wsConnectionTTL}}"
+WS_MAX_INACTIVITY_TTL: "{{wsConnectionTTL}}"
 WS_MULTIPLE_ADDRESSES_ENABLED: "{{wsMultipleAddressesEnabled}}"
 WS_SUBSCRIPTION_LIMIT: "{{wsSubscriptionsLimit}}"
 
