--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -416,9 +416,12 @@ services:
       INPUT_SIZE_LIMIT: "${RELAY_INPUT_SIZE_LIMIT}"
       RATE_LIMIT_DISABLED: "${RELAY_RATE_LIMIT_DISABLED}"
       SUBSCRIPTIONS_ENABLED: true
+      ETH_POPULATE_SYNTHETIC_CONTRACT_RESULTS: "${RELAY_ETH_POPULATE_SYNTHETIC_CONTRACT_RESULTS}"
+      REDIS_ENABLED: "${RELAY_REDIS_ENABLED}"
+      REDIS_URL: "${RELAY_REDIS_URL}"
       WS_CONNECTION_LIMIT_PER_IP: "${WS_CONNECTION_LIMIT_PER_IP}"
       WS_CONNECTION_LIMIT: "${WS_CONNECTION_LIMIT}"
-      WS_MAX_CONNECTION_TTL: "${WS_MAX_CONNECTION_TTL}"
+      WS_MAX_INACTIVITY_TTL: "${WS_MAX_INACTIVITY_TTL}"
       WS_MULTIPLE_ADDRESSES_ENABLED: "${WS_MULTIPLE_ADDRESSES_ENABLED}"
       WS_SUBSCRIPTION_LIMIT: "${WS_SUBSCRIPTION_LIMIT}"
     ports:
