chore: env var name consistency
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -419,11 +419,11 @@ services:
       ETH_POPULATE_SYNTHETIC_CONTRACT_RESULTS: "${RELAY_ETH_POPULATE_SYNTHETIC_CONTRACT_RESULTS}"
       REDIS_ENABLED: "${RELAY_REDIS_ENABLED}"
       REDIS_URL: "${RELAY_REDIS_URL}"
-      WS_CONNECTION_LIMIT_PER_IP: "${WS_CONNECTION_LIMIT_PER_IP}"
-      WS_CONNECTION_LIMIT: "${WS_CONNECTION_LIMIT}"
-      WS_MAX_INACTIVITY_TTL: "${WS_MAX_INACTIVITY_TTL}"
-      WS_MULTIPLE_ADDRESSES_ENABLED: "${WS_MULTIPLE_ADDRESSES_ENABLED}"
-      WS_SUBSCRIPTION_LIMIT: "${WS_SUBSCRIPTION_LIMIT}"
+      WS_CONNECTION_LIMIT_PER_IP: "${RELAY_WS_CONNECTION_LIMIT_PER_IP}"
+      WS_CONNECTION_LIMIT: "${RELAY_WS_CONNECTION_LIMIT}"
+      WS_MAX_INACTIVITY_TTL: "${RELAY_WS_MAX_INACTIVITY_TTL}"
+      WS_MULTIPLE_ADDRESSES_ENABLED: "${RELAY_WS_MULTIPLE_ADDRESSES_ENABLED}"
+      WS_SUBSCRIPTION_LIMIT: "${RELAY_WS_SUBSCRIPTION_LIMIT}"
     ports:
       - "8546:8546"
       - "8547:8547"
