--- a/templates/.env.template
+++ b/templates/.env.template
@@ -76,11 +76,11 @@ RELAY_DEV_MODE=false
 RELAY_INPUT_SIZE_LIMIT=1
 RELAY_RATE_LIMIT_DISABLED=false
 
-WS_CONNECTION_LIMIT_PER_IP: "{{wsConnectionLimitPerIp}}"
-WS_CONNECTION_LIMIT: "{{wsConnectionLimit}}"
-WS_MAX_INACTIVITY_TTL: "{{wsConnectionTTL}}"
-WS_MULTIPLE_ADDRESSES_ENABLED: "{{wsMultipleAddressesEnabled}}"
-WS_SUBSCRIPTION_LIMIT: "{{wsSubscriptionsLimit}}"
+RELAY_WS_CONNECTION_LIMIT_PER_IP: "{{wsConnectionLimitPerIp}}"
+RELAY_WS_CONNECTION_LIMIT: "{{wsConnectionLimit}}"
+RELAY_WS_MAX_INACTIVITY_TTL: "{{wsConnectionTTL}}"
+RELAY_WS_MULTIPLE_ADDRESSES_ENABLED: "{{wsMultipleAddressesEnabled}}"
+RELAY_WS_SUBSCRIPTION_LIMIT: "{{wsSubscriptionsLimit}}"
 
 #### Record Stream Uploader ####
 STREAM_EXTENSION={{streamExtension}}
