--- a/templates/local/.env.template
+++ b/templates/local/.env.template
@@ -78,11 +78,11 @@ RELAY_RATE_LIMIT_DISABLED=true
 RELAY_ETH_POPULATE_SYNTHETIC_CONTRACT_RESULTS=true
 
 #### JSON RPC Relay Websocket settings ####
-WS_CONNECTION_LIMIT_PER_IP: "{{wsConnectionLimitPerIp}}"
-WS_CONNECTION_LIMIT: "{{wsConnectionLimit}}"
-WS_MAX_INACTIVITY_TTL: "{{wsConnectionTTL}}"
-WS_MULTIPLE_ADDRESSES_ENABLED: "{{wsMultipleAddressesEnabled}}"
-WS_SUBSCRIPTION_LIMIT: "{{wsSubscriptionsLimit}}"
+RELAY_WS_CONNECTION_LIMIT_PER_IP: "{{wsConnectionLimitPerIp}}"
+RELAY_WS_CONNECTION_LIMIT: "{{wsConnectionLimit}}"
+RELAY_WS_MAX_INACTIVITY_TTL: "{{wsConnectionTTL}}"
+RELAY_WS_MULTIPLE_ADDRESSES_ENABLED: "{{wsMultipleAddressesEnabled}}"
+RELAY_WS_SUBSCRIPTION_LIMIT: "{{wsSubscriptionsLimit}}"
 
 #### Record Stream Uploader ####
 STREAM_EXTENSION={{streamExtension}}
