--- a/templates/bootstrap.template.properties
+++ b/templates/bootstrap.template.properties
@@ -9,5 +9,5 @@ hedera.recordStream.compressFilesOnCreation={{compressFilesOnCreation}}
 balances.compressOnCreation={{compressOnCreation}}
 contracts.maxNumWithHapiSigsAccess={{maxNumWithHapiSigsAccess}}
 accounts.blocklist.enabled={{blocklistEnabled}}
-accounts.blocklist.resource={{blocklistResource}}
+accounts.blocklist.path={{{blocklistPath}}}
 {{/features}}
