--- a/templates/local/bootstrap.template.properties
+++ b/templates/local/bootstrap.template.properties
@@ -8,5 +8,5 @@ files.maxSizeKb={{maxSizeKb}}
 contracts.precompile.atomicCryptoTransfer.enabled={{atomicCryptoTransfer}}
 hedera.transaction.eip2930.enabled={{eip2930}}
 accounts.blocklist.enabled={{blocklistEnabled}}
-accounts.blocklist.resource={{blocklistResource}}
+accounts.blocklist.path={{{blocklistPath}}}
 {{/features}}
