--- a/.eslintrc
+++ b/.eslintrc
@@ -43,6 +43,15 @@
 				"tsx": "never"
 			}
 		],
-		"import/prefer-default-export": "off"
+		"import/prefer-default-export": "off",
+		"@typescript-eslint/ban-types": [
+			"error",
+			{
+				"extendDefaults": true,
+				"types": {
+					"{}": false
+				}
+			}
+		]
 	}
 }
