--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/find-config": "^1.0.3",
     "@types/pino": "^7.0.5",
     "dotenv": "^16.3.1",
     "pino": "^8.16.0",
