add clean up state
Signed-off-by: georgi-l95 <glazarov95@gmail.com>

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "author": "hashgraph",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/dockerode": "^3.3.21",
+    "@types/shelljs": "^0.8.14",
     "@types/yargs": "^17.0.28",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
@@ -45,9 +47,12 @@
   },
   "dependencies": {
     "@types/pino": "^7.0.5",
+    "dockerode": "^4.0.0",
     "dotenv": "^16.3.1",
     "pino": "^8.16.0",
     "pino-pretty": "^10.2.3",
+    "semver": "^7.5.4",
+    "shelljs": "^0.8.5",
     "yargs": "^17.7.2"
   }
 }
