--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint src/**/*.ts",
     "lint-fix": "eslint --fix src/**/*.ts",
     "pretty": "prettier --write 'src/**/*.ts'",
-    "precommit": "npm run lint-fix && npm run pretty",
+    "precommit": "npm run pretty",
     "prepush": "npm run lint"
   },
   "bin": {
