--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@hashgraph/sdk": "^2.37.0",
     "@types/pino": "^7.0.5",
     "dockerode": "^4.0.0",
     "dotenv": "^16.3.1",
