--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/pino": "^7.0.5",
     "dockerode": "^4.0.0",
     "dotenv": "^16.3.1",
+    "ethers": "^6.8.0",
     "js-yaml": "^4.1.0",
     "semver": "^7.5.4",
     "shelljs": "^0.8.5",
