work on account creation state
Signed-off-by: georgi-l95 <glazarov95@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node --loader ts-node/esm ./src/index.ts start",
     "restart": "node --loader ts-node/esm ./src/index.ts restart",
     "stop": "node --loader ts-node/esm ./src/index.ts stop",
+    "generate-accounts": "node --loader ts-node/esm ./src/index.ts generate-accounts",
     "test:smoke": "npm --prefix test/smoke run test",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
