--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ network-logs/**
 .idea
 /node_modules
 .pid
-/dist
+/build
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
