--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "main": "index.ts",
   "scripts": {
     "test:readiness": "node --loader ts-node/esm src/utils/testNode.js",
-    "start": "node --loader ts-node/esm ./src/index.ts start",
-    "start:detached": "node --loader ts-node/esm ./src/index.ts start -d",
-    "restart": "node --loader ts-node/esm ./src/index.ts restart",
-    "stop": "node --loader ts-node/esm ./src/index.ts stop",
-    "generate-accounts": "node --loader ts-node/esm ./src/index.ts generate-accounts",
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node ./build/index.js start",
+    "restart": "npm run build && node ./build/index.js restart",
+    "stop": "npm run build && node ./build/index.js stop",
+    "generate-accounts": "npm run build && node ./build/index.js generate-accounts",
     "test:smoke": "npm --prefix test/smoke run test",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "lint": "eslint src/**/*.ts",
     "lint-fix": "eslint --fix src/**/*.ts",
     "pretty": "prettier --write 'src/**/*.ts'",
     "precommit": "npm run pretty",
-    "prepush": "npm run lint"
+    "prepush": "npm run lint",
+    "publish": "npm run build && npm publish"
   },
   "bin": {
-    "hedera": "node --loader ts-node/esm ./src/index.ts"
+    "hedera": "./build/index.js"
   },
   "repository": {
     "type": "git",
@@ -57,6 +57,7 @@
     "dotenv": "^16.3.1",
     "ethers": "^6.8.0",
     "js-yaml": "^4.1.0",
+    "rimraf": "^5.0.5",
     "semver": "^7.5.4",
     "shelljs": "^0.8.5",
     "yargs": "^17.7.2"
