fix: Updating DEV_MODE to be set to true.
Signed-off-by: ebadiere <ebadiere@gmail.com>

--- a/.env
+++ b/.env
@@ -72,7 +72,7 @@ RELAY_LIMIT_DURATION=60000
 RELAY_HBAR_RATE_LIMIT_TINYBAR=0
 RELAY_HBAR_RATE_LIMIT_DURATION=0
 RELAY_ETH_GET_LOGS_BLOCK_RANGE_LIMIT=1000
-RELAY_DEV_MODE=false
+RELAY_DEV_MODE=true
 RELAY_INPUT_SIZE_LIMIT=1
 RELAY_RATE_LIMIT_DISABLED=true
 
