--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test:readiness": "node --loader ts-node/esm src/utils/testNode.js",
-    "build": "rimraf ./build && tsc",
+    "build": "rimraf ./build && tsc && npm run copy-assets",
     "start": "npm run build && node ./build/index.js start",
     "restart": "npm run build && node ./build/index.js restart",
     "stop": "npm run build && node ./build/index.js stop",
@@ -16,7 +16,8 @@
     "lint-fix": "eslint --fix src/**/*.ts",
     "pretty": "prettier --write 'src/**/*.ts'",
     "precommit": "npm run pretty",
-    "prepush": "npm run lint"
+    "prepush": "npm run lint",
+    "copy-assets": "cp compose-network/network-node/data/config/evm-addresses-blocklist.csv build/state"
   },
   "bin": {
     "hedera": "./build/index.js"
@@ -50,6 +51,7 @@
     "@hashgraph/sdk": "^2.39.0",
     "blessed": "^0.1.81",
     "blessed-terminal": "^0.1.22",
+    "csv-parser": "^3.0.0",
     "dockerode": "^4.0.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
