--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     mem_swappiness: 0
     privileged: true
     network_mode: none
+    command: ["-d 16"]
 
   network-node:
     image: "${NETWORK_NODE_IMAGE_PREFIX}${NETWORK_NODE_IMAGE_NAME}:${NETWORK_NODE_IMAGE_TAG}"
@@ -417,7 +418,6 @@ services:
       INPUT_SIZE_LIMIT: "${RELAY_INPUT_SIZE_LIMIT}"
       RATE_LIMIT_DISABLED: "${RELAY_RATE_LIMIT_DISABLED}"
       SUBSCRIPTIONS_ENABLED: true
-      HEALTHCHECK_PORT: 8547
       ETH_POPULATE_SYNTHETIC_CONTRACT_RESULTS: "${RELAY_ETH_POPULATE_SYNTHETIC_CONTRACT_RESULTS}"
       REDIS_ENABLED: "${RELAY_REDIS_ENABLED}"
       REDIS_URL: "${RELAY_REDIS_URL}"
