--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pretty": "prettier --write 'src/**/*.ts'",
     "precommit": "npm run pretty",
     "prepush": "npm run lint",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "mocha"
   },
   "bin": {
     "hedera": "./build/index.js"
@@ -32,20 +33,25 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/blessed": "^0.1.24",
+    "@types/chai": "^4.3.11",
     "@types/detect-port": "^1.3.5",
     "@types/dockerode": "^3.3.21",
+    "@types/expect": "^24.3.0",
     "@types/js-yaml": "^4.0.8",
+    "@types/mocha": "^10.0.6",
     "@types/shelljs": "^0.8.14",
     "@types/yargs": "^17.0.28",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "chai": "^5.0.0",
     "eslint": "^8.51.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.0",
+    "mocha": "^10.2.0",
     "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
+    "ts-mocha": "^10.0.0",
     "typescript": "^5.3.2"
   },
   "dependencies": {
