--- a/package.json
+++ b/package.json
@@ -40,18 +40,19 @@
     "@types/js-yaml": "^4.0.8",
     "@types/mocha": "^10.0.6",
     "@types/shelljs": "^0.8.14",
+    "@types/sinon": "^17.0.3",
     "@types/yargs": "^17.0.28",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
-    "chai": "^5.0.0",
+    "chai": "^4.3.6",
     "eslint": "^8.51.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.0",
-    "mocha": "^10.2.0",
+    "mocha": "^9.2.2",
     "prettier": "^3.0.3",
-    "ts-mocha": "^10.0.0",
+    "sinon": "^14.0.0",
     "typescript": "^5.3.2"
   },
   "dependencies": {
@@ -67,6 +68,7 @@
     "rimraf": "^5.0.5",
     "semver": "^7.5.4",
     "shelljs": "^0.8.5",
+    "ts-mocha": "^9.0.0",
     "yargs": "^17.7.2"
   }
 }
