--- a/.env
+++ b/.env
@@ -102,3 +102,15 @@ PROMETHEUS_IMAGE_TAG=v2.41.0
 ### Grafana ####
 GRAFANA_IMAGE_NAME=grafana/grafana
 GRAFANA_IMAGE_TAG=8.5.16
+
+### Sourcify ####
+#Sourcify Common
+SOURCIFY_TESTING=false
+SOURCIFY_TAG=main
+SOURCIFY_UI_DOMAIN_NAME=localhost
+SOURCIFY_SERVER_REPOSITORY_PATH=/data
+#Sourcify Server
+SOURCIFY_SERVER_SOLC_REPO=/data/solc-bin/linux-amd64
+SOURCIFY_SERVER_SOLJSON_REPO=/data/solc-bin/soljson
+SOURCIFY_SERVER_CREATE2_VERIFICATION=false
+SOURCIFY_USE_LOCAL_NODE=true
