--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -285,9 +285,11 @@ services:
     restart: "unless-stopped"
     ports:
       - "8080:8080"
-    environment:
-      DOCKER_LOCAL_MIRROR_NODE_MENU_NAME: ${DOCKER_LOCAL_MIRROR_NODE_MENU_NAME}
-      DOCKER_LOCAL_MIRROR_NODE_URL: ${DOCKER_LOCAL_MIRROR_NODE_URL}
+    volumes:
+      - ./networks-config.json:/app/networks-config.json #workaround to https://github.com/hashgraph/hedera-mirror-node-explorer/issues/933
+    # environment:
+    #   DOCKER_LOCAL_MIRROR_NODE_MENU_NAME: ${DOCKER_LOCAL_MIRROR_NODE_MENU_NAME}
+    #   DOCKER_LOCAL_MIRROR_NODE_URL: ${DOCKER_LOCAL_MIRROR_NODE_URL}
 
   web3:
     image: "${MIRROR_IMAGE_PREFIX}hedera-mirror-web3:${MIRROR_IMAGE_TAG}"
@@ -495,6 +497,68 @@ services:
       network-node-bridge:
         ipv4_address: 172.27.0.50
 
+  sourcify-repository:
+    image: ghcr.io/hashgraph/hedera-sourcify:repository-${SOURCIFY_TAG}
+    restart: unless-stopped
+    container_name: sourcify-repository-${SOURCIFY_TAG}
+    ports:
+      - "10000:80"
+    volumes:
+      - sourcify-repository:/data:ro
+    networks:
+      - mirror-node
+    environment:
+      REPOSITORY_PATH: "${SOURCIFY_SERVER_REPOSITORY_PATH}"
+      REPOSITORY_SERVER_EXTERNAL_PORT: 10000
+      UI_DOMAIN_NAME: "${SOURCIFY_UI_DOMAIN_NAME}"
+      TESTING: "${SOURCIFY_TESTING}"
+      TAG: "${SOURCIFY_TAG}"
+
+  sourcify-server:
+    image: ghcr.io/hashgraph/hedera-sourcify:server-${SOURCIFY_TAG}
+    restart: unless-stopped
+    container_name: sourcify-server-${SOURCIFY_TAG}
+    ports:
+      - "5002:5002"
+    volumes:
+      - sourcify-repository:/data
+    networks:
+      - mirror-node
+    environment:
+      SERVER_PORT: "5002"
+      UI_DOMAIN_NAME: "${SOURCIFY_UI_DOMAIN_NAME}"
+      SERVER_CREATE2_VERIFICATION: "${SOURCIFY_SERVER_CREATE2_VERIFICATION}"
+      TESTING: "${SOURCIFY_TESTING}"
+      TAG: "${SOURCIFY_TAG}"
+      SOLC_REPO: "${SOURCIFY_SERVER_SOLC_REPO}"
+      SOLJSON_REPO: "${SOURCIFY_SERVER_SOLJSON_REPO}"
+      REPOSITORY_PATH: "${SOURCIFY_SERVER_REPOSITORY_PATH}"
+      REPOSITORY_SERVER_URL: "http://sourcify-repository-${SOURCIFY_TAG}"
+      USE_LOCAL_NODE: "${SOURCIFY_USE_LOCAL_NODE}"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5002/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+
+  sourcify-ui:
+    image: ghcr.io/hashgraph/hedera-sourcify:ui-${SOURCIFY_TAG}
+    restart: unless-stopped
+    container_name: sourcify-ui-${SOURCIFY_TAG}
+    ports:
+      - "1234:80"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+    volumes:
+      - type: bind
+        source: ./sourcify-ui-docker-config.json
+        target: /usr/share/nginx/html/config.json
+    networks:
+      - mirror-node
+
 networks:
   network-node-bridge:
     name: network-node-bridge
@@ -521,3 +585,5 @@ volumes:
     name: prometheus-data
   grafana-data:
     name: grafana-data
+  sourcify-repository:
+    name: sourcify-repository
