--- a/.github/workflows/publish-npm-package.yaml
+++ b/.github/workflows/publish-npm-package.yaml
@@ -21,5 +21,5 @@ jobs:
       - name: Publish npm package
         run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }
- 
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      
