--- a/.github/workflows/zxf-publish-docker-images.yaml
+++ b/.github/workflows/zxf-publish-docker-images.yaml
@@ -138,7 +138,7 @@ jobs:
       - prepare-release
     steps:
       - name: Checkout Code
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # pinned to v3.3.0
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
       - name: Authenticate to Google Cloud
         id: google-auth
