--- a/.github/workflows/flow-pull-request-checks.yaml
+++ b/.github/workflows/flow-pull-request-checks.yaml
@@ -40,7 +40,7 @@ concurrency:
 jobs:
   smoke-tests:
     name: Smoke Tests
-    runs-on: [self-hosted, Linux, large, ephemeral]
+    runs-on: [self-hosted, Linux, medium, ephemeral]
 
     strategy:
       fail-fast: false
@@ -97,7 +97,10 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          sudo apt-get update
+          sudo apt-get install Xvfb
+          npm ci
 
       - name: Start local node
         run: npm run start -- -d
@@ -115,7 +118,7 @@ jobs:
 
   unit-tests:
           name: Unit Tests
-          runs-on: [self-hosted, Linux, large, ephemeral]
+          runs-on: [self-hosted, Linux, medium, ephemeral]
       
           strategy:
               fail-fast: false
@@ -130,7 +133,7 @@ jobs:
               uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
               with:
                 node-version: ${{ matrix.node-version }}
-                cache: npm
+                cache: npm  
       
             - name: Install dependencies
               run: npm ci
