--- a/.github/workflows/flow-pull-request-checks.yaml
+++ b/.github/workflows/flow-pull-request-checks.yaml
@@ -99,7 +99,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install Xvfb
+          sudo apt-get install xvfb -y
           npm ci
 
       - name: Start local node
@@ -133,7 +133,7 @@ jobs:
               uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
               with:
                 node-version: ${{ matrix.node-version }}
-                cache: npm  
+                cache: npm
       
             - name: Install dependencies
               run: npm ci
