--- a/.github/workflows/flow-pull-request-checks.yaml
+++ b/.github/workflows/flow-pull-request-checks.yaml
@@ -99,7 +99,8 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install xvfb libnss3 -y
+          sudo apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev  -y
+          sudo apt-get install libnss3 libxss1 libasound2 libxtst6 xauth xvfb -y
           npm ci
 
       - name: Start local node
