--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,7 +2,7 @@
 ##### Global Protection Rule ######
 ###################################
 # NOTE: This rule is overriden by the more specific rules below. This is the catch-all rule for all files not covered by the more specific rules below.
-*                                               @hashgraph/release-engineering @hashgraph/release-engineering-managers
+*                                               @georgi-l95 @isavov @Ivo-Yankov @natanasow @konstantinabl @Ivo-Yankov @victor-yanev
 
 #########################
 #####  Core Files  ######
