feat: add smart contract verification
Signed-off-by: Yaroslav Markovski <yaroslav.markovski@limechain.tech>

--- a/.env
+++ b/.env
@@ -100,13 +100,12 @@ GRAFANA_IMAGE_NAME=grafana/grafana
 GRAFANA_IMAGE_TAG=8.5.16
 
 ### Sourcify ####
-#Sourcify Common
-SOURCIFY_TESTING=false
 SOURCIFY_TAG=main
-SOURCIFY_UI_DOMAIN_NAME=localhost
-SOURCIFY_SERVER_REPOSITORY_PATH=/data
+
 #Sourcify Server
-SOURCIFY_SERVER_SOLC_REPO=/data/solc-bin/linux-amd64
-SOURCIFY_SERVER_SOLJSON_REPO=/data/solc-bin/soljson
-SOURCIFY_SERVER_CREATE2_VERIFICATION=false
-SOURCIFY_USE_LOCAL_NODE=true
+SOURCIFY_SERVER_PORT=5555
+SOURCIFY_NODE_ENV=development
+
+#Sourcify ui
+SOURCIFY_UI_PORT=1234
+SOURCIFY_REPOSITORY_PORT=10000
