--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -286,7 +286,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./networks-config.json:/app/networks-config.json
+      - ./compose-network/explorer/networks-config.json:/app/networks-config.json
 
   web3:
     image: "${MIRROR_IMAGE_PREFIX}hedera-mirror-web3:${MIRROR_IMAGE_TAG}"
@@ -494,56 +494,39 @@ services:
       network-node-bridge:
         ipv4_address: 172.27.0.50
 
-  sourcify-repository:
-    image: ghcr.io/hashgraph/hedera-sourcify:repository-${SOURCIFY_TAG}
-    restart: unless-stopped
-    container_name: sourcify-repository-${SOURCIFY_TAG}
-    ports:
-      - "10000:80"
-    volumes:
-      - sourcify-repository:/data:ro
-    networks:
-      - mirror-node
-    environment:
-      REPOSITORY_PATH: "${SOURCIFY_SERVER_REPOSITORY_PATH}"
-      REPOSITORY_SERVER_EXTERNAL_PORT: 10000
-      UI_DOMAIN_NAME: "${SOURCIFY_UI_DOMAIN_NAME}"
-      TESTING: "${SOURCIFY_TESTING}"
-      TAG: "${SOURCIFY_TAG}"
-
   sourcify-server:
-    image: ghcr.io/hashgraph/hedera-sourcify:server-${SOURCIFY_TAG}
+    image: ghcr.io/hashgraph/hedera-sourcify/server:${SOURCIFY_TAG}
     restart: unless-stopped
     container_name: sourcify-server-${SOURCIFY_TAG}
-    ports:
-      - "5002:5002"
-    volumes:
-      - sourcify-repository:/data
-    networks:
-      - mirror-node
     environment:
-      SERVER_PORT: "5002"
-      UI_DOMAIN_NAME: "${SOURCIFY_UI_DOMAIN_NAME}"
-      SERVER_CREATE2_VERIFICATION: "${SOURCIFY_SERVER_CREATE2_VERIFICATION}"
-      TESTING: "${SOURCIFY_TESTING}"
-      TAG: "${SOURCIFY_TAG}"
-      SOLC_REPO: "${SOURCIFY_SERVER_SOLC_REPO}"
-      SOLJSON_REPO: "${SOURCIFY_SERVER_SOLJSON_REPO}"
-      REPOSITORY_PATH: "${SOURCIFY_SERVER_REPOSITORY_PATH}"
-      REPOSITORY_SERVER_URL: "http://sourcify-repository-${SOURCIFY_TAG}"
-      USE_LOCAL_NODE: "${SOURCIFY_USE_LOCAL_NODE}"
+      NODE_ENV: ${SOURCIFY_NODE_ENV}
+    ports:
+      - "${SOURCIFY_SERVER_PORT}:5555"
+    volumes:
+      - type: bind
+        source: ./compose-network/sourcify/servers.yaml
+        target: /home/app/services/server/dist/servers.yaml
+      - type: bind
+        source: ./compose-network/sourcify/sourcify-chains.json
+        target: /home/app/services/server/dist/sourcify-chains.json
+      - type: bind
+        source: ./compose-network/sourcify/local.js
+        target: /home/app/services/server/dist/config/local.js
+      - type: volume
+        source: sourcify-data
+        target: /data
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5002/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:${SOURCIFY_SERVER_PORT}/health"]
       interval: 30s
       timeout: 10s
       retries: 10
 
-  sourcify-ui:
-    image: ghcr.io/hashgraph/hedera-sourcify:ui-${SOURCIFY_TAG}
+  sourcify-sourcify-ui:
+    image: ghcr.io/hashgraph/hedera-sourcify/ui:${SOURCIFY_TAG}
     restart: unless-stopped
     container_name: sourcify-ui-${SOURCIFY_TAG}
     ports:
-      - "1234:80"
+      - "${SOURCIFY_UI_PORT}:80"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 30s
@@ -551,10 +534,23 @@ services:
       retries: 10
     volumes:
       - type: bind
-        source: ./sourcify-ui-docker-config.json
+        source: ./compose-network/sourcify/ui-config.json
         target: /usr/share/nginx/html/config.json
-    networks:
-      - mirror-node
+
+  sourcify-repository:
+    image: ghcr.io/hashgraph/hedera-sourcify/repository:${SOURCIFY_TAG}
+    restart: unless-stopped
+    container_name: sourcify-repository-${SOURCIFY_TAG}
+    environment:
+      SOURCIFY_SERVER: "http://host.docker.internal:${SOURCIFY_SERVER_PORT}"
+      SERVER_URL: "http://localhost:${SOURCIFY_SERVER_PORT}"
+    volumes:
+      - type: volume
+        source: sourcify-data
+        target: /data
+        read_only: true
+    ports:
+      - "${SOURCIFY_REPOSITORY_PORT}:80"
 
 networks:
   network-node-bridge:
@@ -582,5 +578,5 @@ volumes:
     name: prometheus-data
   grafana-data:
     name: grafana-data
-  sourcify-repository:
-    name: sourcify-repository
+  sourcify:
+    name: sourcify-data
