chore: add application.yml to web3 volumes in docker-compose.yml
Signed-off-by: Victor Yanev <victor.yanev@limechain.tech>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -309,6 +309,8 @@ services:
       - "8545:8545"
     restart: unless-stopped
     tty: true
+    volumes:
+      - "${MIRROR_NODE_CONFIG_PATH}/compose-network/mirror-node/application.yml:/usr/etc/hedera-mirror-web3/application.yml"
 
   monitor:
     image: "${MIRROR_IMAGE_PREFIX}hedera-mirror-monitor:${MIRROR_IMAGE_TAG}"
