ci: Add semantic release action flow
Signed-off-by: Yaroslav Markovski <yaroslav.markovski@limechain.tech>

--- a/.github/workflows/flow-semantic-release.yml
+++ b/.github/workflows/flow-semantic-release.yml
@@ -9,15 +9,20 @@ jobs:
       contents: write
       issues: write
       pull-requests: write
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, medium, ephemeral]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout Code
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Configure Node JS
+        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
         with:
           node-version: 20
-      - run: npm ci
-      - run: npm run build
-      - run: npx semantic-release
+      - name: Clean Install
+        run: npm ci
+      - name: Build Source
+        run: npm run build
+      - name: Run semantic-release
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
 
