--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/expect": "^24.3.0",
     "@types/js-yaml": "^4.0.8",
     "@types/mocha": "^10.0.6",
+    "@types/semver": "^7.5.8",
     "@types/shelljs": "^0.8.14",
     "@types/sinon": "^17.0.3",
     "@types/yargs": "^17.0.28",
