--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -501,7 +501,7 @@ services:
 
 networks:
   network-node-bridge:
-    name: network-node-bridge
+    name: hedera-network-node-bridge
     driver: bridge
     ipam:
       driver: default
@@ -510,10 +510,10 @@ networks:
           ip_range: 172.27.0.0/24
           gateway: 172.27.0.254
   mirror-node:
-    name: mirror-node
+    name: hedera-mirror-node
     driver: bridge
   cloud-storage:
-    name: cloud-storage
+    name: hedera-cloud-storage
     driver: bridge
 
 volumes:
