fix: removing all the networks with hedera-prefix instead of the ones listed in the constant
Signed-off-by: Mariusz Jasuwienas <mariusz.jasuwienas@arianelabs.com>

--- a/docker-compose.multinode.evm.yml
+++ b/docker-compose.multinode.evm.yml
@@ -48,3 +48,10 @@ services:
     volumes:
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances/:/node/streams/accountBalances/"
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams/:/node/streams/recordstreams/"
+    networks:
+      - multinode-importer-evm-network
+
+networks:
+  multinode-importer-evm-network:
+    name: hedera-multinode-importer-evm
+    driver: bridge
