--- a/docker-compose.evm.yml
+++ b/docker-compose.evm.yml
@@ -8,6 +8,9 @@ services:
         "echo 'Deleting old recordStream files.';find /records/ -type f -delete;echo 'This container is intentionally disabled by the EVM profile.';"
       ]
     command: []
+    networks:
+      - uploader-network
+
   account-balances-uploader:
     restart: "no"
     entrypoint:
@@ -17,6 +20,9 @@ services:
         "echo 'Deleting old accountBalances files.';find /balances/ -type f -delete;echo 'This container is intentionally disabled by the EVM profile.';"
       ]
     command: []
+    networks:
+      - uploader-network
+
   record-sidecar-uploader:
     restart: "no"
     entrypoint:
@@ -26,6 +32,9 @@ services:
         "echo 'Deleting old sidecars files.';find /sidecar-files/ -type f -delete;echo 'This container is intentionally disabled by the EVM profile.';"
       ]
     command: []
+    networks:
+      - uploader-network
+
   minio:
     restart: "no"
     entrypoint:
@@ -34,8 +43,18 @@ services:
         "This container is intentionally disabled by the EVM profile."
       ]
     command: []
+    networks:
+      - uploader-network
+
   importer:
     user: root
     volumes:
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances/balance0.0.3:/node/streams/accountBalances/balance0.0.3"
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams/record0.0.3:/node/streams/recordstreams/record0.0.3"
+    networks:
+      - uploader-network
+
+networks:
+  uploader-network:
+    name: hedera-uploader-network
+    driver: bridge
