fix: removing the bridge suffix from one of the bridge typed networks as its usage seemed to be inconsistent
Signed-off-by: Mariusz Jasuwienas <mariusz.jasuwienas@arianelabs.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -503,7 +503,7 @@ services:
 
 networks:
   network-node-bridge:
-    name: hedera-network-node-bridge
+    name: hedera-network-node
     driver: bridge
     ipam:
       driver: default
