--- a/docker-compose.evm.yml
+++ b/docker-compose.evm.yml
@@ -8,8 +8,7 @@ services:
         "echo 'Deleting old recordStream files.';find /records/ -type f -delete;echo 'This container is intentionally disabled by the EVM profile.';"
       ]
     command: []
-    networks:
-      - uploader-network
+    network_mode: none
 
   account-balances-uploader:
     restart: "no"
@@ -20,8 +19,7 @@ services:
         "echo 'Deleting old accountBalances files.';find /balances/ -type f -delete;echo 'This container is intentionally disabled by the EVM profile.';"
       ]
     command: []
-    networks:
-      - uploader-network
+    network_mode: none
 
   record-sidecar-uploader:
     restart: "no"
@@ -32,8 +30,7 @@ services:
         "echo 'Deleting old sidecars files.';find /sidecar-files/ -type f -delete;echo 'This container is intentionally disabled by the EVM profile.';"
       ]
     command: []
-    networks:
-      - uploader-network
+    network_mode: none
 
   minio:
     restart: "no"
@@ -43,18 +40,11 @@ services:
         "This container is intentionally disabled by the EVM profile."
       ]
     command: []
-    networks:
-      - uploader-network
+    network_mode: none
 
   importer:
     user: root
     volumes:
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/accountBalances/balance0.0.3:/node/streams/accountBalances/balance0.0.3"
       - "${NETWORK_NODE_LOGS_ROOT_PATH}/recordStreams/record0.0.3:/node/streams/recordstreams/record0.0.3"
-    networks:
-      - uploader-network
-
-networks:
-  uploader-network:
-    name: hedera-uploader-network
-    driver: bridge
+    network_mode: none
