--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ MIRROR_IMAGE_PREFIX=gcr.io/mirrornode/
 MIRROR_IMAGE_TAG=0.110.0-rc2
 
 #### MirrorNode settings ####
-MIRROR_POSTGRES_IMAGE=ghcr.io/mhga24/postgres:14-alpine
+MIRROR_POSTGRES_IMAGE=ghcr.io/mhga24/postgres:latest
 MIRROR_GRPC_MEM_LIMIT=512m
 MIRROR_IMPORTER_MEM_LIMIT=768m
 MIRROR_REST_MEM_LIMIT=512m
