chore: bump network node image to 0.53.0-alpha.2
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NETWORK_NODE_IMAGE_PREFIX=gcr.io/hedera-registry/
 NETWORK_NODE_IMAGE_NAME=consensus-node
 
 #### Image Tags/Hashes ####
-NETWORK_NODE_IMAGE_TAG=0.52.0
+NETWORK_NODE_IMAGE_TAG=0.53.0-alpha.2
 HAVEGED_IMAGE_TAG=0.53.0-alpha.2
 
 #### Java Process Settings ####
