--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ NETWORK_NODE_IMAGE_PREFIX=gcr.io/hedera-registry/
 NETWORK_NODE_IMAGE_NAME=consensus-node
 
 #### Image Tags/Hashes ####
-NETWORK_NODE_IMAGE_TAG=0.53.0-alpha.2
-HAVEGED_IMAGE_TAG=0.53.0-alpha.2
+NETWORK_NODE_IMAGE_TAG=0.53.1
+HAVEGED_IMAGE_TAG=0.53.1
 
 #### Java Process Settings ####
 PLATFORM_JAVA_HEAP_MIN=256m
