chore: bump network node to 0.54.0-alpha.2
Signed-off-by: Victor Yanev <victor.yanev@limechain.tech>

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ NETWORK_NODE_IMAGE_PREFIX=gcr.io/hedera-registry/
 NETWORK_NODE_IMAGE_NAME=consensus-node
 
 #### Image Tags/Hashes ####
-NETWORK_NODE_IMAGE_TAG=0.53.2
-HAVEGED_IMAGE_TAG=0.53.2
+NETWORK_NODE_IMAGE_TAG=0.54.0-alpha.2
+HAVEGED_IMAGE_TAG=0.54.0-alpha.2
 
 #### Java Process Settings ####
 PLATFORM_JAVA_HEAP_MIN=256m
