debug: increase retries
Signed-off-by: Ivo Yankov <ivo@devlabs.bg>

--- a/.github/workflows/flow-pull-request-checks.yaml
+++ b/.github/workflows/flow-pull-request-checks.yaml
@@ -101,8 +101,8 @@ jobs:
           cd test/smoke
           npm ci
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
+#      - name: Setup tmate session
+#        uses: mxschmitt/action-tmate@v3
 
       - name: Start the local node
         run: npm run start -- -d --verbose=trace
