--- a/.github/workflows/flow-pull-request-checks.yaml
+++ b/.github/workflows/flow-pull-request-checks.yaml
@@ -86,6 +86,8 @@ jobs:
         node-version: [18.x]
 
     steps:
+      - uses: Vampire/setup-wsl@v3
+
       - name: Checkout repository
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
